Fixed icon horizontal alignment in small-itwinui-expandable-block

--- a/ui/core/src/ui-core/style/itwinui-overrides.scss
+++ b/ui/core/src/ui-core/style/itwinui-overrides.scss
@@ -55,7 +55,10 @@
       > .iui-icon {
         width: $uicore-icons-x-small !important;
         height: $uicore-icons-x-small !important;
+
         margin-top: $small-space !important;
+        margin-left: $iui-xs !important;
+        margin-right: $iui-s !important;
       }
     }
 
